--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
   "dependencies": {
     "@prisma/client": "^5.21.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/nodemailer": "^6.4.17",
     "axios": "^1.7.8",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "http-status-codes": "^2.3.0",
+    "nodemailer": "^6.9.16",
     "prisma": "^5.21.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
