--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "src/server.ts",
   "scripts": {
-    "lint": "eslint 'src/**/*.{ts,tsx}'",
-    "lint:fix": "eslint 'src/**/*.{ts,tsx}' --fix",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "format": "prettier --write 'src/**/*.{ts,tsx,json,md}'",
     "format:check": "prettier --check 'src/**/*.{ts,tsx,json,md}'",
     "type-check": "tsc",
@@ -17,15 +17,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.21.1",
+    "@prisma/client": "^6.1.0",
     "axios": "^1.7.8",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "http-status-codes": "^2.3.0",
     "nodemailer": "^6.9.16",
-    "prisma": "^5.21.1",
+    "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0",
     "zod": "^3.23.8"
   },
@@ -41,8 +42,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "prettier": "^3.3.3",
-    "rimraf": "^6.0.1",
-    "tsc-alias": "^1.8.10",
+    "prisma": "^6.1.0",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3"
   }
